--- a/index.html
+++ b/index.html
@@ -3,60 +3,122 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mirza Designing</title>
+  <title>Mirza Designing - Portfolio</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      text-align: center;
-      background: #f5f5f5;
-      color: #333;
-    }
-    header {
-      background: #007bff;
-      color: white;
-      padding: 20px;
-      font-size: 24px;
-      font-weight: bold;
-    }
-    .content {
-      margin: 40px auto;
-    }
-    .btn {
-      display: inline-block;
-      margin-top: 20px;
-      padding: 12px 25px;
-      background: #25d366;
-      color: white;
-      font-size: 18px;
-      border-radius: 8px;
-      text-decoration: none;
-    }
-    .btn:hover {
-      background: #1ebe5a;
-    }
-    .icon {
-      margin-right: 10px;
-      vertical-align: middle;
-    }
+    /* Reset */
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: #f4f6fa; color: #333; line-height: 1.6; scroll-behavior: smooth; }
+
+    /* Header */
+    header { background: linear-gradient(135deg, #007bff, #0056d2); color: white; padding: 20px 0; text-align: center; position: sticky; top: 0; z-index: 1000; }
+    header h1 { font-size: 2.2rem; letter-spacing: 2px; }
+    nav { margin-top: 10px; }
+    nav a { color: white; margin: 0 15px; text-decoration: none; font-weight: bold; transition: 0.3s; }
+    nav a:hover { color: #ffdd57; }
+
+    /* Section */
+    section { padding: 60px 20px; max-width: 1100px; margin: auto; }
+    h2 { font-size: 2rem; color: #007bff; margin-bottom: 25px; text-align: center; position: relative; }
+    h2::after { content: ""; display: block; width: 60px; height: 3px; background: #007bff; margin: 10px auto; border-radius: 5px; }
+
+    /* About */
+    #about p { font-size: 1.1rem; text-align: center; max-width: 800px; margin: auto; }
+
+    /* Portfolio */
+    .portfolio-grid { display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; margin-top: 20px; }
+    .portfolio-grid img { width: 300px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.15); transition: transform 0.4s ease, box-shadow 0.3s; }
+    .portfolio-grid img:hover { transform: scale(1.05); box-shadow: 0 8px 20px rgba(0,0,0,0.25); }
+
+    /* Services */
+    .services { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; }
+    .service-box { background: white; padding: 25px; border-radius: 12px; text-align: center; box-shadow: 0 4px 12px rgba(0,0,0,0.1); transition: transform 0.3s; }
+    .service-box:hover { transform: translateY(-8px); box-shadow: 0 8px 20px rgba(0,0,0,0.2); }
+    .service-box h3 { margin-bottom: 10px; color: #007bff; }
+
+    /* Contact */
+    #contact { text-align: center; }
+    .btn { display: inline-block; margin-top: 20px; padding: 14px 28px; background: #25D366; color: white; border-radius: 50px; text-decoration: none; font-size: 1.1rem; font-weight: bold; transition: 0.3s; }
+    .btn:hover { background: #1ebe5d; transform: scale(1.05); }
+
+    /* Footer */
+    footer { background: #222; color: white; text-align: center; padding: 20px; margin-top: 40px; font-size: 0.9rem; }
+    footer a { color: #ffdd57; text-decoration: none; }
+
+    /* Animations */
+    [data-animate] { opacity: 0; transform: translateY(40px); transition: all 0.8s ease; }
+    [data-animate].active { opacity: 1; transform: translateY(0); }
   </style>
 </head>
 <body>
-  <header>Mirza Designing</header>
+  <header>
+    <h1>Mirza Designing</h1>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#portfolio">Portfolio</a>
+      <a href="#services">Services</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
 
-  <div class="content">
-    <h2>Welcome to Mirza Designing</h2>
-    <p>Contact us directly on WhatsApp for more details.</p>
+  <section id="about" data-animate>
+    <h2>About Me</h2>
+    <p>Hello! I am <b>Hassan Mirza</b>, a creative Graphic Designer. I design logos, posters, banners, and social media content that helps brands stand out and attract customers.</p>
+  </section>
 
-    <!-- WhatsApp Link Button -->
-    <a class="btn" href="https://wa.me/923708518868" target="_blank">
-      <img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
-           alt="WhatsApp" width="24" height="24">
-      Chat on WhatsApp
-    </a>
-  </div>
+  <section id="portfolio" data-animate>
+    <h2>Portfolio</h2>
+    <div class="portfolio-grid">
+      <img src="https://via.placeholder.com/300x200.png?text=Logo+Design" alt="Work 1">
+      <img src="https://via.placeholder.com/300x200.png?text=Poster+Design" alt="Work 2">
+      <img src="https://via.placeholder.com/300x200.png?text=Social+Media+Post" alt="Work 3">
+      <img src="https://via.placeholder.com/300x200.png?text=Banner+Design" alt="Work 4">
+    </div>
+  </section>
+
+  <section id="services" data-animate>
+    <h2>Services</h2>
+    <div class="services">
+      <div class="service-box">
+        <h3>🎨 Logo Designing</h3>
+        <p>Unique and memorable logo designs tailored to your brand.</p>
+      </div>
+      <div class="service-box">
+        <h3>🖼️ Poster & Flyer Design</h3>
+        <p>Eye-catching posters and flyers for marketing campaigns.</p>
+      </div>
+      <div class="service-box">
+        <h3>💳 Business Card Design</h3>
+        <p>Professional and creative business card layouts.</p>
+      </div>
+      <div class="service-box">
+        <h3>📱 Social Media Graphics</h3>
+        <p>Engaging designs for Instagram, Facebook & other platforms.</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="contact" data-animate>
+    <h2>Contact Me</h2>
+    <p>Let’s create something amazing together!</p>
+    <a class="btn" href="https://wa.me/923001234567" target="_blank">💬 Chat on WhatsApp</a>
+    <p>Or email me at <b>yourmail@gmail.com</b></p>
+  </section>
+
+  <footer>
+    <p>© 2025 Mirza Designing | Made with ❤️ by Hassan Mirza</p>
+  </footer>
+
+  <script>
+    // Scroll Animation
+    const elements = document.querySelectorAll("[data-animate]");
+    window.addEventListener("scroll", () => {
+      elements.forEach(el => {
+        const rect = el.getBoundingClientRect().top;
+        if(rect < window.innerHeight - 100){
+          el.classList.add("active");
+        }
+      });
+    });
+  </script>
 </body>
 </html>
-
-  
