--- a/index.html
+++ b/index.html
@@ -4,121 +4,102 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mirza Designing - Portfolio</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
-    /* Reset */
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: #f4f6fa; color: #333; line-height: 1.6; scroll-behavior: smooth; }
+    /* General Reset */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
+    }
 
-    /* Header */
-    header { background: linear-gradient(135deg, #007bff, #0056d2); color: white; padding: 20px 0; text-align: center; position: sticky; top: 0; z-index: 1000; }
-    header h1 { font-size: 2.2rem; letter-spacing: 2px; }
-    nav { margin-top: 10px; }
-    nav a { color: white; margin: 0 15px; text-decoration: none; font-weight: bold; transition: 0.3s; }
-    nav a:hover { color: #ffdd57; }
+    body {
+      background: linear-gradient(135deg, #6a11cb, #2575fc);
+      color: #fff;
+      line-height: 1.6;
+      overflow-x: hidden;
+    }
 
-    /* Section */
-    section { padding: 60px 20px; max-width: 1100px; margin: auto; }
-    h2 { font-size: 2rem; color: #007bff; margin-bottom: 25px; text-align: center; position: relative; }
-    h2::after { content: ""; display: block; width: 60px; height: 3px; background: #007bff; margin: 10px auto; border-radius: 5px; }
+    header {
+      text-align: center;
+      padding: 80px 20px;
+      animation: fadeInDown 1s ease-in-out;
+    }
 
-    /* About */
-    #about p { font-size: 1.1rem; text-align: center; max-width: 800px; margin: auto; }
+    header h1 {
+      font-size: 3rem;
+      font-weight: 700;
+      margin-bottom: 10px;
+    }
 
-    /* Portfolio */
-    .portfolio-grid { display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; margin-top: 20px; }
-    .portfolio-grid img { width: 300px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.15); transition: transform 0.4s ease, box-shadow 0.3s; }
-    .portfolio-grid img:hover { transform: scale(1.05); box-shadow: 0 8px 20px rgba(0,0,0,0.25); }
+    header p {
+      font-size: 1.2rem;
+      opacity: 0.9;
+    }
+
+    /* Sections */
+    section {
+      padding: 60px 20px;
+      text-align: center;
+      animation: fadeInUp 1s ease-in-out;
+    }
+
+    section h2 {
+      font-size: 2.2rem;
+      margin-bottom: 20px;
+      color: #ffeb3b;
+    }
 
     /* Services */
-    .services { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; }
-    .service-box { background: white; padding: 25px; border-radius: 12px; text-align: center; box-shadow: 0 4px 12px rgba(0,0,0,0.1); transition: transform 0.3s; }
-    .service-box:hover { transform: translateY(-8px); box-shadow: 0 8px 20px rgba(0,0,0,0.2); }
-    .service-box h3 { margin-bottom: 10px; color: #007bff; }
+    .services {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 20px;
+      margin-top: 30px;
+    }
+
+    .service {
+      background: rgba(255, 255, 255, 0.1);
+      padding: 20px;
+      border-radius: 15px;
+      transition: transform 0.3s;
+    }
+
+    .service:hover {
+      transform: translateY(-10px);
+      background: rgba(255, 255, 255, 0.2);
+    }
+
+    /* Portfolio */
+    .portfolio {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      margin-top: 30px;
+    }
+
+    .portfolio img {
+      width: 100%;
+      border-radius: 15px;
+      transition: transform 0.4s ease;
+    }
+
+    .portfolio img:hover {
+      transform: scale(1.05);
+    }
 
     /* Contact */
-    #contact { text-align: center; }
-    .btn { display: inline-block; margin-top: 20px; padding: 14px 28px; background: #25D366; color: white; border-radius: 50px; text-decoration: none; font-size: 1.1rem; font-weight: bold; transition: 0.3s; }
-    .btn:hover { background: #1ebe5d; transform: scale(1.05); }
+    .contact-links {
+      margin-top: 30px;
+    }
 
-    /* Footer */
-    footer { background: #222; color: white; text-align: center; padding: 20px; margin-top: 40px; font-size: 0.9rem; }
-    footer a { color: #ffdd57; text-decoration: none; }
-
-    /* Animations */
-    [data-animate] { opacity: 0; transform: translateY(40px); transition: all 0.8s ease; }
-    [data-animate].active { opacity: 1; transform: translateY(0); }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>Mirza Designing</h1>
-    <nav>
-      <a href="#about">About</a>
-      <a href="#portfolio">Portfolio</a>
-      <a href="#services">Services</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
-
-  <section id="about" data-animate>
-    <h2>About Me</h2>
-    <p>Hello! I am <b>Hassan Mirza</b>, a creative Graphic Designer. I design logos, posters, banners, and social media content that helps brands stand out and attract customers.</p>
-  </section>
-
-  <section id="portfolio" data-animate>
-    <h2>Portfolio</h2>
-    <div class="portfolio-grid">
-      <img src="https://via.placeholder.com/300x200.png?text=Logo+Design" alt="Work 1">
-      <img src="https://via.placeholder.com/300x200.png?text=Poster+Design" alt="Work 2">
-      <img src="https://via.placeholder.com/300x200.png?text=Social+Media+Post" alt="Work 3">
-      <img src="https://via.placeholder.com/300x200.png?text=Banner+Design" alt="Work 4">
-    </div>
-  </section>
-
-  <section id="services" data-animate>
-    <h2>Services</h2>
-    <div class="services">
-      <div class="service-box">
-        <h3>🎨 Logo Designing</h3>
-        <p>Unique and memorable logo designs tailored to your brand.</p>
-      </div>
-      <div class="service-box">
-        <h3>🖼️ Poster & Flyer Design</h3>
-        <p>Eye-catching posters and flyers for marketing campaigns.</p>
-      </div>
-      <div class="service-box">
-        <h3>💳 Business Card Design</h3>
-        <p>Professional and creative business card layouts.</p>
-      </div>
-      <div class="service-box">
-        <h3>📱 Social Media Graphics</h3>
-        <p>Engaging designs for Instagram, Facebook & other platforms.</p>
-      </div>
-    </div>
-  </section>
-
-  <section id="contact" data-animate>
-    <h2>Contact Me</h2>
-    <p>Let’s create something amazing together!</p>
-    <a class="btn" href="https://wa.me/923001234567" target="_blank">💬 Chat on WhatsApp</a>
-    <p>Or email me at <b>yourmail@gmail.com</b></p>
-  </section>
-
-  <footer>
-    <p>© 2025 Mirza Designing | Made with ❤️ by Hassan Mirza</p>
-  </footer>
-
-  <script>
-    // Scroll Animation
-    const elements = document.querySelectorAll("[data-animate]");
-    window.addEventListener("scroll", () => {
-      elements.forEach(el => {
-        const rect = el.getBoundingClientRect().top;
-        if(rect < window.innerHeight - 100){
-          el.classList.add("active");
-        }
-      });
-    });
-  </script>
-</body>
-</html>
+    .contact-links a {
+      display: inline-block;
+      margin: 10px;
+      padding: 12px 20px;
+      background: #ff4081;
+      color: #fff;
+      border-radius: 30px;
+      text-deco
+      
