--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head><meta name="google-site-verification" content="fl4vaVsPCR8Mf9Ek2rVExivpp1tr7Fgio12ObcwoxbU" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Mirza Designing — Graphic Designer Portfolio</title>
